--- a/CostcoProject/res/layout/activity_about.xml
+++ b/CostcoProject/res/layout/activity_about.xml
@@ -19,11 +19,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:linksClickable="true"
+        android:layout_marginBottom="10dp"       
         android:text="@string/author" />
 
     <TextView
@@ -34,11 +33,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-          android:linksClickable="true"
+        android:layout_marginBottom="10dp"       
         android:text="@string/author_email" />
 
     <TextView
@@ -49,11 +47,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/mobile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:linksClickable="true"
+        android:layout_marginBottom="10dp"      
         android:text="@string/author_mobile" />
     
 </LinearLayout>
