--- a/CostcoProject/res/layout/activity_about.xml
+++ b/CostcoProject/res/layout/activity_about.xml
@@ -40,7 +40,7 @@
         android:text="@string/author_email" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/pot_wknd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/author_mobile_label"
